--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 *{
   margin: 0;
-  background-color:yellow;
+  background-color:rgb(71, 71, 60);
   
 }
 .square{
   height:8vh;
   width:5vw;
   border: 3px solid #000;
+  border-radius: 5px;
   margin: 0;
 }
 
@@ -23,7 +24,7 @@
   display:flex;
   flex-direction:column;
 }
-.row{
+.cell{
   display: flex;
   flex-direction: row;
 }
@@ -35,10 +36,11 @@
   width:3vw;
 }
 .ob{
-  background-color: red;
+  background-color: rgb(121, 28, 28);
   height:8vh;
   width:5vw;
   border: 3px solid #000;
+  border-radius: 3px;
   margin: 0;
 
 }
@@ -51,23 +53,7 @@
   
 
 }
-.btn {
-  background: #080808;
-  background-image: -webkit-linear-gradient(top, #080808, #0d0e0f);
-  background-image: -moz-linear-gradient(top, #080808, #0d0e0f);
-  background-image: -ms-linear-gradient(top, #080808, #0d0e0f);
-  background-image: -o-linear-gradient(top, #080808, #0d0e0f);
-  background-image: linear-gradient(to bottom, #080808, #0d0e0f);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-  margin-top: 4%;
-}
+
 .head{
   margin-left: 35%;
 }
